fix: installation scripts for all OSs